add application insights

--- a/PollingStation/PollingStationApp/PollingStationApp.csproj
+++ b/PollingStation/PollingStationApp/PollingStationApp.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Blazorise.Bootstrap5" Version="1.7.6" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.7.6" />
     <PackageReference Include="Blazorise.SignaturePad" Version="1.7.6" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="9.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.5" />
