--- a/PollingStation/PollingStationAPI/appsettings.json
+++ b/PollingStation/PollingStationAPI/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Http.Connections": "Warning",
+      "Microsoft.AspNetCore.SignalR": "Warning"
     }
   },
   "AzureAd": {
