update readme file

--- a/PollingStation/PollingStationApp/appsettings.json
+++ b/PollingStation/PollingStationApp/appsettings.json
@@ -14,9 +14,7 @@
   "ClientConfigurations": {
     "PollingStationClient": {
       "ClientName": "PollingStationClient",
-      "BaseURL": "http://localhost:5062",
-      "KeyHeaderName": "x-api-key",
-      "Key": "my-secure-api-key"
+      "BaseURL": "http://localhost:5062"
     }
   },
   "Logging": {
